<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/logo_transparent"
        android:contentDescription="@string/logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:fontFamily="@font/raleway_bold"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_descr"
        android:fontFamily="@font/roboto_slab"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_username"
        android:inputType="text"
        android:background="@drawable/text_box"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email"
        android:inputType="text"
        android:background="@drawable/text_box"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:background="@drawable/text_box"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/continue1" />

    <TextView
        android:id="@+id/different_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_sign_up"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_slab"
        android:textColor="@color/mainColor"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_continue"
        android:background="@drawable/button2"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="130dp">

        <TextView
            android:id="@+id/have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/have_account"
            android:gravity="end"
            android:layout_marginEnd="5dp"
            android:textStyle="italic"
            android:fontFamily="@font/roboto_slab"/>

        <TextView
            android:id="@+id/have_account_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sign_in"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/green"/>
    </LinearLayout>
</LinearLayout>