<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/opening_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container"
        android:paddingVertical="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="380dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semibold"
            android:textSize="20sp"
            android:text="@string/opening_title"
            android:gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/opening_description"
            android:textColor="@color/mainColor"
            android:textSize="12sp"
            android:layout_marginHorizontal="20dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            app:srcCompat="@drawable/logo_transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="40dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:text="@string/sign_in"
                android:layout_marginEnd="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>