<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Product">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_transparent"
            android:layout_marginEnd="80dp"/>

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_search"
            android:background="@android:color/transparent"
            android:gravity="end"/>

        <ImageButton
            android:id="@+id/cart_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_shopping_cart"
            android:background="@android:color/transparent"
            android:paddingTop="8dp"/>

        <ImageButton
            android:id="@+id/account_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_account"
            android:background="@android:color/transparent"
            android:paddingTop="8dp"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/eos90d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/raleway_bold"
            android:textSize="30sp"
            android:textColor="@color/mainColor"
            android:text="@string/product_title" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:fontFamily="@font/raleway_bold"
            android:textSize="25sp"
            android:textColor="@color/green"/>
    </LinearLayout>

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/product_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shootingImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shooting"/>

            <TextView
                android:id="@+id/shootingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shootingText"
                android:fontFamily="@font/raleway_bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/megapixelsImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/megapixels"/>

            <TextView
                android:id="@+id/megapixelsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/megapixelsText" />
        </LinearLayout>
    </LinearLayout>

    d

</LinearLayout>