<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Campaign">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_transparent"
            android:layout_marginEnd="80dp"/>

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_search"
            android:background="@android:color/transparent"
            android:gravity="end"/>

        <ImageButton
            android:id="@+id/cart_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_shopping_cart"
            android:background="@android:color/transparent"
            android:paddingTop="8dp"/>

        <ImageButton
            android:id="@+id/account_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_account"
            android:background="@android:color/transparent"
            android:paddingTop="8dp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/button3"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/step1Image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    app:srcCompat="@drawable/camera_icon" />

                <TextView
                    android:id="@+id/step1Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_bold"
                    android:textSize="60sp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/first_step" />

                <TextView
                    android:id="@+id/step1Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_slab"
                    android:layout_marginBottom="40dp"
                    android:layout_marginHorizontal="30dp"
                    android:text="@string/first_step_descr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/container2"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/step2Image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/recycle" />

                <TextView
                    android:id="@+id/step2Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_bold"
                    android:textSize="60sp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/second_step" />

                <TextView
                    android:id="@+id/step2Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_slab"
                    android:layout_marginBottom="40dp"
                    android:layout_marginHorizontal="30dp"
                    android:textColor="@color/white"
                    android:text="@string/second_step_descr" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/container3"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/step3Image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/forest" />

                <TextView
                    android:id="@+id/step3Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_bold"
                    android:textSize="60sp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/third_step" />

                <TextView
                    android:id="@+id/step3Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_slab"
                    android:layout_marginBottom="40dp"
                    android:layout_marginHorizontal="30dp"
                    android:textColor="@color/white"
                    android:text="@string/third_step_descr" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>